A note can be shown in an extra view and it's possible to edit it

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,21 +6,25 @@
 
     <LinearLayout
         android:id="@+id/group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="2" >
 
         <Button
             android:id="@+id/add"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/Add_Entry" 
             android:onClick="add_Item"/>
 
         <Button
             android:id="@+id/delete"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/Delete_First_Entry" 
+            android:layout_weight="1"
             android:onClick="delete_Item"/>
         
     </LinearLayout>
