--- a/res/layout/activity_additem.xml
+++ b/res/layout/activity_additem.xml
@@ -6,9 +6,10 @@
     <EditText
         android:id="@+id/edit_note"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="0.61"
         android:ems="10"
+        android:textSize="24sp"
         android:gravity="top|left"
         android:hint="@string/Add_Text"
         android:inputType="text" >
