--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,30 +9,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="2" >
+        android:weightSum="1" >
 
         <Button
             android:id="@+id/add"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/Add_Entry" 
+            android:text="@string/add_Entry" 
             android:onClick="add_Item"/>
-
-        <Button
-            android:id="@+id/delete"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/Delete_First_Entry" 
-            android:layout_weight="1"
-            android:onClick="delete_Item"/>
         
     </LinearLayout>
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout> 
