--- a/res/layout/activity_change_dataset.xml
+++ b/res/layout/activity_change_dataset.xml
@@ -2,19 +2,50 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
+    
+    <TextView
+        android:id="@+id/entry_title_heading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="@string/title_heading"
+        android:textSize="24sp"
+        android:textColor="#63b8ff" />
 
     <EditText
-        android:id="@+id/edit_note"
+        android:id="@+id/edit_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:gravity="top|left"
+        android:hint="@string/add_title"
+        android:inputType="text"
+        android:textSize="24sp" 
+        android:layout_marginBottom="10dp">
+
+        <requestFocus />
+    </EditText>
+    
+    <TextView
+        android:id="@+id/entry_description_heading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="@string/description_heading"
+        android:textSize="24sp" 
+        android:textColor="#63b8ff"/>
+    
+    <EditText
+        android:id="@+id/edit_description"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.61"
         android:ems="10"
         android:textSize="24sp"
         android:gravity="top|left"
-        android:hint="@string/add_Text"
+        android:hint="@string/add_description"
         android:inputType="text" >
 
-        <requestFocus />
     </EditText>
 
     <LinearLayout
