--- a/res/layout/activity_display_item.xml
+++ b/res/layout/activity_display_item.xml
@@ -10,7 +10,33 @@
     tools:context=".DisplayItemActivity" >
 
     <TextView
-        android:id="@+id/EntryView"
+        android:id="@+id/entry_title_heading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="@string/title_heading"
+        android:textSize="24sp"
+        android:textColor="#63b8ff" />
+    
+    <TextView
+        android:id="@+id/title_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:textSize="24sp"
+        android:layout_marginBottom="10dp" />
+    
+    <TextView
+        android:id="@+id/entry_description_heading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="@string/description_heading"
+        android:textSize="24sp" 
+        android:textColor="#63b8ff"/>
+    
+    <TextView
+        android:id="@+id/description_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.61"
