--- a/res/layout/activity_display_item.xml
+++ b/res/layout/activity_display_item.xml
@@ -16,7 +16,7 @@
         android:ems="10"
         android:text="@string/title_heading"
         android:textSize="24sp"
-        android:textColor="#63b8ff" />
+        android:textColor="@color/darkblue" />
     
     <TextView
         android:id="@+id/title_view"
@@ -26,6 +26,13 @@
         android:textSize="24sp"
         android:layout_marginBottom="10dp" />
     
+    <View android:id="@+id/separator" 
+	 android:background="@color/darkblue" 
+	 android:layout_width = "fill_parent"
+	 android:layout_height="1dip"
+	 android:layout_marginBottom="15dp"/>
+    
+    
     <TextView
         android:id="@+id/entry_description_heading"
         android:layout_width="match_parent"
@@ -33,7 +40,7 @@
         android:ems="10"
         android:text="@string/description_heading"
         android:textSize="24sp" 
-        android:textColor="#63b8ff"/>
+        android:textColor="@color/darkblue"/>
     
     <TextView
         android:id="@+id/description_view"
@@ -55,7 +62,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="edit_entry"
-            android:text="@string/edit" />
+            android:text="@string/edit"
+            android:textColor="#fff"
+            android:layout_margin="3dp"
+            android:background="@drawable/custom_button" />
 
         <Button
             android:id="@+id/delete"
@@ -63,7 +73,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="delete_entry"
-            android:text="@string/delete" />
+            android:text="@string/delete"
+            android:textColor="#fff"
+            android:layout_margin="3dp"
+            android:background="@drawable/custom_button" />
         
         <Button
             android:id="@+id/back"
@@ -71,7 +84,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="back"
-            android:text="@string/back" />
+            android:text="@string/back"
+            android:textColor="#fff"
+            android:layout_margin="3dp"
+            android:background="@drawable/custom_button" />
     </LinearLayout>
 
 </LinearLayout>
