--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:onClick="add_Item"
             android:textColor="#fff"
             android:layout_margin="5dp"
+            android:textSize="24sp"
             android:background="@drawable/custom_button"/>
         
     </LinearLayout>
