--- a/res/layout/activity_change_dataset.xml
+++ b/res/layout/activity_change_dataset.xml
@@ -56,24 +56,23 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" 
         android:layout_marginBottom="15dp"
-        android:layout_margin="5dp">
+        android:layout_margin="3dp">
         
        <Button 
             android:id="@+id/open_set_time_view"
-            android:layout_width="200dp"
+            android:layout_width="155dp"
             android:layout_height="50dp"
             android:onClick="open_set_time"
             android:textSize="20sp"
             android:drawableLeft="@drawable/glyphicons_053_alarm"
             android:text="@string/set_alert_time"
              />
-        
-        <TextView 
-        android:id="@+id/set_time_heading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:layout_marginLeft="5dp" />
+
+       <TextView
+           android:id="@+id/set_time_heading"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:textSize="18sp" />
         
      </LinearLayout>
      
@@ -82,11 +81,11 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" 
         android:layout_marginBottom="15dp"
-        android:layout_margin="5dp">
+        android:layout_margin="3dp">
         
       <Button 
            android:id="@+id/get_location"
-           android:layout_width="200dp"
+           android:layout_width="155dp"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/glyphicons_233_direction"
            android:onClick="get_Location"
